test/tests/bad/transmute-size-mismatch2.carth
;; NoClassInstance

(define: (foo a)
    (forall (a b) (Fun a b))
  (transmute a))
